--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
 <section id="publications">
     <h2>Publications</h2>
     <p>
-        (You can list your journal papers, preprints, or conference articles here.)
+An Experimental Study of Stable and Chaotic Structures in a Plasma System Analogous to Earth Magnetosphere, Journal of Physics: Conference Series, 2919, 012022, December 2024, Doi: 10.1088/1742-6596/2919/1/012022
+Characterization of negative hydrogen ion source using optical emission spectroscopy, International Conference on Frontiers in Pure and Applied Physics, 29 February-2 March 2024.
+The Optical and Electrical Response of Firerod in Presence and Absence of Dust Grains, Physics of Plasmas, 33 (1), 013701,  January 2026, Doi: 10.1063/5.0306369.
+Characterization and Optimization of Cesium Delivery Tube for Stable Flux in Negative Ion Source (CeWNIS), Accepted for publication at IEEE Transactions on Plasma Science, Doi: 10.1109/TPS.2025.3647219.
     </p>
 </section>
 
